--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ header {
 header nav ul {
     display: flex;
     list-style: none;
+    border: 1px solid blue;
+}
+
+header nav ul li {
+    border: 1px solid gold;
 }
 
 header nav ul a {
@@ -43,6 +48,13 @@ header nav ul a {
     position: absolute;
     top: 30px;
     border: 1px solid white;
+}
+
+.header-nav-button {
+    width: 40px;
+    height: 40px;
+    background: black;
+    display: none;
 }
 
 .header-content {
@@ -426,9 +438,41 @@ form button {
     letter-spacing: 2px;
 }
 
+.active {
+    display: block;
+}
+
 @media only screen and (max-width: 768px) {
     .header-nav {
+        width: 100%;
+        position: fixed;
+        top: 40px;
+        left: 0;
+        background: red;
+    }
+    header nav {
         display: none;
+    }
+    header nav ul {
+        flex-direction: column;
+    }
+    header nav ul li {
+        text-align: center;
+    }
+    .header-nav-mobile {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 40px;
+        border: 1px solid white;
+        background: wheat;
+    }
+    .header-nav-button {
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: block;
     }
     .header-content p:first-child {
         font-size: 66px;
