--- a/style.css
+++ b/style.css
@@ -50,13 +50,6 @@ header nav ul a {
     border: 1px solid white;
 }
 
-.header-nav-button {
-    width: 40px;
-    height: 40px;
-    background: black;
-    display: none;
-}
-
 .header-content {
     width: 100vw;
     max-width: 935px;
@@ -448,7 +441,8 @@ form button {
         position: fixed;
         top: 40px;
         left: 0;
-        background: red;
+        background: #bc70fe;
+        z-index: 2;
     }
     header nav {
         display: none;
@@ -466,14 +460,17 @@ form button {
         width: 100%;
         height: 40px;
         border: 1px solid white;
-        background: wheat;
-        z-index: 2;
+        background: #8446b9;
+        opacity: 0.9;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .header-nav-button {
-        position: absolute;
-        top: 0;
-        right: 0;
-        display: block;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 36px;
+        color: #ffffff;
+        border: 1px solid red;
     }
     .header-content p:first-child {
         font-size: 66px;
