--- a/style.css
+++ b/style.css
@@ -456,6 +456,7 @@ form button {
     #wave2 {
         bottom: -20px;
         width: 324px;
+        right: -1px;
     }
     #wave1 {
         bottom: 25px;
